--- a/web/package.json
+++ b/web/package.json
@@ -2,6 +2,7 @@
   "name": "web",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://localhost:8080/app",
   "dependencies": {
     "axios": "^0.18.0",
     "prop-types": "^15.7.2",
