--- a/web/package.json
+++ b/web/package.json
@@ -5,6 +5,7 @@
   "homepage": "http://localhost:8080/app",
   "dependencies": {
     "axios": "^0.18.0",
+    "flow": "^0.2.3",
     "jwt-decode": "^2.2.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.0",
@@ -17,7 +18,8 @@
     "redux-actions": "^2.6.5",
     "redux-saga": "^1.0.2",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.84.0"
+    "semantic-ui-react": "^0.84.0",
+    "typescript": "^3.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
